deployment-files-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"files"},"name":"files-app","namespace":"test"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"files"}},"template":{"metadata":{"labels":{"app":"files"}},"spec":{"containers":[{"args":["-m","http.server","-d","/data","5678"],"command":["/usr/local/bin/python"],"image":"docker.io/library/python","name":"files-app","volumeMounts":[{"mountPath":"/data","name":"local-files"}]}],"volumes":[{"name":" [...]
  creationTimestamp: "2019-11-28T18:10:47Z"
  generation: 2
  labels:
    app: files
  name: files-app
  namespace: test
  resourceVersion: "423333"
  selfLink: /apis/apps/v1/namespaces/test/deployments/files-app
  uid: c0b29029-0641-40f3-ad6e-cd942976caec
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: files
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: files
    spec:
      containers:
        - args:
            - -v
            - -m
            - http.server
            - -d
            - /data/
            - "5678"
          command:
            - /usr/local/bin/python
          image: docker.io/library/python
          imagePullPolicy: Always
          name: files-app
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /data
              name: local-files
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: local-files
          persistentVolumeClaim:
            claimName: local-files
status:
  availableReplicas: 1
  conditions:
    - lastTransitionTime: "2019-11-28T18:10:51Z"
      lastUpdateTime: "2019-11-28T18:10:51Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2019-11-28T18:10:47Z"
      lastUpdateTime: "2019-11-28T18:32:41Z"
      message: ReplicaSet "files-app-7ff97cdb5c" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
