ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: httpbin
  name: httpbin-s
  namespace: default
spec:
  ingressClassName: contour
  rules:
  - http:
      paths:
      - backend:
          service:
            name: httpbin
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts: 
      - 192.168.50.111
